# wayfire

./: CONTRIBUTING.md  README.md  config.h.in  meson.build  meson_options.txt
debian/: changelog  control  copyright  libwf-touch-dev.install  libwf-utils-dev.install  libwf-utils0.install  rules  watch  wayfire-dev.install  wayfire.examples  wayfire.install
debian/patches/: defaultconf.patch  series  winshadows.patch
metadata/: alpha.xml  animate.xml  autostart-static.xml  autostart.xml  blur.xml  command.xml  core.xml  cube.xml  decoration.xml  expo.xml  extra-gestures.xml  fast-switcher.xml  grid.xml  idle.xml  input-device.xml  input.xml  invert.xml  meson.build  move.xml  oswitch.xml  output.xml  pixswitcher.xml  place.xml  preserve-output.xml  resize.xml  scale-title-filter.xml  scale.xml  simple-tile.xml  switcher.xml  vswipe.xml  vswitch.xml  window-rules.xml  winshadows.xml  wm-actions.xml  wobbly.xml  workarounds.xml  wrot.xml  zoom.xml
plugins/: meson.build
plugins/animate/: animate.cpp  animate.hpp  basic_animations.hpp  meson.build  system_fade.hpp
plugins/animate/fire/: fire.cpp  fire.hpp  particle.cpp  particle.hpp  shaders.hpp
plugins/animate/shaders/: frag.glsl  vertex.glsl
plugins/blur/: blur-base.cpp  blur.cpp  blur.hpp  bokeh.cpp  box.cpp  gaussian.cpp  kawase.cpp  meson.build
plugins/common/: meson.build
plugins/common/wayfire/plugins/common/: cairo-util.hpp  geometry-animation.hpp  move-drag-interface.hpp  preview-indication.hpp  shared-core-data.hpp  simple-texture.hpp  view-change-viewport-signal.hpp  workspace-stream-sharing.hpp  workspace-wall.hpp
plugins/cube/: cube-background.hpp  cube-control-signal.hpp  cube.cpp  cube.hpp  cubemap-shaders.tpp  cubemap.cpp  cubemap.hpp  meson.build  shaders-3-2.tpp  shaders.tpp  simple-background.cpp  simple-background.hpp  skydome.cpp  skydome.hpp
plugins/decor/: deco-button.cpp  deco-button.hpp  deco-layout.cpp  deco-layout.hpp  deco-subsurface.cpp  deco-theme.cpp  deco-theme.hpp  decoration.cpp  meson.build
plugins/mag/: mag.cpp  meson.build
plugins/pixdecor/: deco-button.cpp  deco-button.hpp  deco-layout.cpp  deco-layout.hpp  deco-subsurface.cpp  deco-subsurface.hpp  deco-theme.cpp  deco-theme.hpp  decoration.cpp  meson.build
plugins/scale/: meson.build  scale-title-filter.cpp  scale-title-overlay.cpp  scale-title-overlay.hpp  scale.cpp
plugins/scale/wayfire/plugins/: scale-signal.hpp  scale-transform.hpp
plugins/single_plugins/: alpha.cpp  autostart-static.cpp  autostart.cpp  command.cpp  compositor-view-test.cpp  expo.cpp  extra-gestures.cpp  fast-switcher.cpp  fisheye.cpp  grid.cpp  idle.cpp  invert.cpp  meson.build  move.cpp  oswitch.cpp  pixswitcher.cpp  place.cpp  preserve-output.cpp  resize.cpp  snap_signal.hpp  switcher.cpp  vswipe-processing.hpp  vswipe.cpp  wrot.cpp  zoom.cpp
plugins/tile/: meson.build  tile-plugin.cpp  tree-controller.cpp  tree.cpp  tree.hpp
plugins/vswitch/: meson.build  vswitch.cpp
plugins/vswitch/wayfire/plugins/: vswitch.hpp
plugins/window-rules/: lambda-rules-registration.hpp  meson.build  view-action-interface.cpp  view-action-interface.hpp  window-rules.cpp
plugins/winshadows/: deco-shadow.cpp  deco-shadow.hpp  meson.build  shadow-surface.cpp  shadow-surface.hpp  shadows.cpp
plugins/wm-actions/: meson.build  wm-actions-signals.hpp  wm-actions.cpp
plugins/wobbly/: meson.build  wobbly.c  wobbly.cpp  wobbly.h
plugins/wobbly/wayfire/plugins/wobbly/: wobbly-signal.hpp
proto/: meson.build
src/: debug-func.hpp  default-config-backend.cpp  main.cpp  main.hpp  meson.build  util.cpp
src/api/wayfire/: bindings.hpp  compositor-surface.hpp  compositor-view.hpp  core.hpp  debug.hpp  decorator.hpp  framebuffer.hpp  geometry.hpp  gtk-shell.hpp  idle.hpp  img.hpp  input-device.hpp  matcher.hpp  object.hpp  opengl.hpp  option-wrapper.hpp  output-layout.hpp  output.hpp  pixman.hpp  plugin.hpp  render-manager.hpp  signal-definitions.hpp  singleton-plugin.hpp  surface.hpp  texture.hpp  util.hpp  view-access-interface.hpp  view-transform.hpp  view.hpp  workspace-manager.hpp  workspace-stream.hpp
src/api/wayfire/nonstd/: reverse.hpp  safe-list.hpp  wlroots-full.hpp  wlroots.hpp
src/core/: core-impl.hpp  core.cpp  framebuffer.cpp  gldebug.hpp  idle.cpp  img.cpp  matcher.cpp  object.cpp  opengl-priv.hpp  opengl.cpp  output-layout.cpp  pixman-priv.hpp  pixman.cpp  plugin.cpp  shaders.tpp  texture.cpp  view-access-interface.cpp  wm.cpp  wm.hpp
src/core/seat/: bindings-repository.cpp  bindings-repository.hpp  cursor.cpp  cursor.hpp  hotspot-manager.cpp  hotspot-manager.hpp  input-manager.cpp  input-manager.hpp  input-method-relay.cpp  input-method-relay.hpp  keyboard.cpp  keyboard.hpp  pointer.cpp  pointer.hpp  pointing-device.cpp  pointing-device.hpp  seat.cpp  seat.hpp  surface-map-state.hpp  switch.cpp  switch.hpp  tablet.cpp  tablet.hpp  touch.cpp  touch.hpp
src/output/: gtk-shell.cpp  gtk-shell.hpp  output-impl.hpp  output.cpp  plugin-loader.cpp  plugin-loader.hpp  render-manager.cpp  wayfire-shell.cpp  wayfire-shell.hpp  workspace-impl.cpp
src/view/: compositor-view.cpp  layer-shell.cpp  subsurface.cpp  subsurface.hpp  surface-impl.hpp  surface.cpp  view-3d.cpp  view-impl.cpp  view-impl.hpp  view.cpp  xdg-shell.cpp  xdg-shell.hpp  xwayland.cpp
