install_data('alpha.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('animate.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('autostart.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('blur.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('command.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('core.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('cube.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('decoration.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('expo.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('extra-gestures.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('fast-switcher.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('fisheye.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('grid.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('idle.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('input.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('input-device.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('invert.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('move.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('oswitch.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('output.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('place.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('preserve-output.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('resize.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('scale.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('simple-tile.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('switcher.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('vswipe.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('vswitch.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('window-rules.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('wm-actions.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('wobbly.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('workarounds.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('wrot.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('zoom.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('scale-title-filter.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('autostart-static.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('pixdecor.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('winshadows.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
install_data('pixswitcher.xml', install_dir: conf_data.get('PLUGIN_XML_DIR'))
